    CpuBind parameter based upon changes to a node's NUMA mode.
 -- Remove support for "ChosLoc" configuration parameter.
 -- Add SlurmctldParameters option allow_user_triggers to enable user-defined
    triggers. User defined triggers are now disabled by default.
 -- Add ResumeFailProgram slurm.conf option to specify a program that is called
    when a node fails to respond by ResumeTimeout.

COMMAND CHANGES (see man pages for details)
===========================================
 -- Add sbatch "--batch" option to identify features required on batch node.
    For example "sbatch --batch=haswell ...".
 -- Report cgroup and NodeFeatures plugin configuration with scontrol and
    sview commands.
 -- Remove the "CPUErr" value from the slurm_print_node_table() API call
    ("scontrol show node"). This was always zero for non-BlueGene systems.

OTHER CHANGES
=============

API CHANGES
===========

Changed members of the following structs
========================================

Added members to the following struct definitions
=================================================

Added the following struct definitions
======================================

Removed members from the following struct definitions
=====================================================
 -- Removed node_scaling from node_info_msg_t.

Changed the following enums and #defines
========================================

Added the following API's
=========================

Changed the following API's
============================
 -- Remove node_scaling argument to slurm_print_node_table() and
    slurm_sprint_node_table().

Removed the following API's
===========================
 -- Removed slurm_xslurm_strerrorcat() function.
 -- Removed slurm_xstrstrip() function.
 -- Removed slurm_load_block_info(), slurm_print_block_info_msg(),
    slurm_print_block_info(), slurm_sprint_block_info().
 -- Removed slurm_get_select_jobinfo().