@@ -69,7 +69,6 @@
 
 #define _pack_job_info_msg(msg,buf)		_pack_buffer_msg(msg,buf)
 #define _pack_job_step_info_msg(msg,buf)	_pack_buffer_msg(msg,buf)
-#define _pack_block_info_resp_msg(msg,buf)	_pack_buffer_msg(msg,buf)
 #define _pack_burst_buffer_info_resp_msg(msg,buf) _pack_buffer_msg(msg,buf)
 #define _pack_front_end_info_msg(msg,buf)	_pack_buffer_msg(msg,buf)
 #define _pack_node_info_msg(msg,buf)		_pack_buffer_msg(msg,buf)
@@ -361,11 +360,6 @@ static void _pack_job_info_request_msg(job_info_request_msg_t *
 static int _unpack_job_info_request_msg(job_info_request_msg_t**
 					msg, Buf buffer,
 					uint16_t protocol_version);
-
-static void _pack_block_info_msg(block_info_t *block_info, Buf buffer,
-				 uint16_t protocol_version);
-static int _unpack_block_info(block_info_t **block_info, Buf buffer,
-			      uint16_t protocol_version);
 
 static void _pack_job_step_info_req_msg(job_step_info_request_msg_t * msg,
 					Buf buffer,
@@ -1118,10 +1112,6 @@ pack_msg(slurm_msg_t const *msg, Buf buffer)
 				    data, buffer,
 				    msg->protocol_version);
 		break;
-	case REQUEST_UPDATE_BLOCK:
-		_pack_block_info_msg((block_info_t *)msg->data, buffer,
-				     msg->protocol_version);
-		break;
 	case REQUEST_REATTACH_TASKS:
 		_pack_reattach_tasks_request_msg(
 			(reattach_tasks_request_msg_t *) msg->data, buffer,
@@ -1820,11 +1810,6 @@ unpack_msg(slurm_msg_t * msg, Buf buffer)
 		rc = _unpack_resv_name_msg((reservation_name_msg_t **)
 					   &(msg->data), buffer,
 					   msg->protocol_version);
-		break;
-	case REQUEST_UPDATE_BLOCK:
-		rc = _unpack_block_info(
-			(block_info_t **)&(msg->data), buffer,
-			msg->protocol_version);
 		break;
 	case RESPONSE_RESERVATION_INFO:
 		rc = _unpack_reserve_info_msg((reserve_info_msg_t **)
@@ -11954,288 +11939,6 @@ unpack_error:
 	slurm_free_job_info_request_msg(job_info);
 	*msg = NULL;
 	return SLURM_ERROR;
-}
-
-static int _unpack_block_job_info(block_job_info_t **job_info, Buf buffer,
-				  uint16_t protocol_version)
-{
-	block_job_info_t *job;
-	uint32_t uint32_tmp;
-	char *cnode_inx_str = NULL;
-
-	job = xmalloc(sizeof(block_job_info_t));
-	*job_info = job;
-
-	safe_unpackstr_xmalloc(&job->cnodes, &uint32_tmp, buffer);
-	safe_unpackstr_xmalloc(&cnode_inx_str, &uint32_tmp, buffer);
-	if (cnode_inx_str == NULL) {
-		job->cnode_inx = bitfmt2int("");
-	} else {
-		job->cnode_inx = bitfmt2int(cnode_inx_str);
-		xfree(cnode_inx_str);
-	}
-	safe_unpack32(&job->job_id, buffer);
-	safe_unpack32(&job->user_id, buffer);
-	safe_unpackstr_xmalloc(&job->user_name, &uint32_tmp, buffer);
-
-	return SLURM_SUCCESS;
-
-unpack_error:
-	slurm_free_block_job_info(job);
-	*job_info = NULL;
-	return SLURM_ERROR;
-}
-
-/* NOTE: There is a matching pack function directly in the select/bluegene
- * plugin dealing with the bg_record_t structure there.  If anything
- * changes here please update that as well.
- */
-static void _pack_block_info_msg(block_info_t *block_info, Buf buffer,
-				 uint16_t protocol_version)
-{
-	uint32_t cluster_dims = (uint32_t)slurmdb_setup_cluster_dims();
-	int dim, count = NO_VAL;
-	ListIterator itr;
-	block_job_info_t *job;
-
-	if (protocol_version >= SLURM_MIN_PROTOCOL_VERSION) {
-		if (!block_info) {
-			packnull(buffer);
-			packnull(buffer);
-			packnull(buffer);
-
-			pack32(1, buffer);
-			pack16(NO_VAL16, buffer);
-
-			packnull(buffer);
-			packnull(buffer);
-
-			pack32(NO_VAL, buffer);
-
-			packnull(buffer);
-			packnull(buffer);
-			packnull(buffer);
-			packnull(buffer);
-			pack32(NO_VAL, buffer);
-			pack32(NO_VAL, buffer);
-			pack16(NO_VAL16, buffer);
-			packnull(buffer);
-			packnull(buffer);
-			pack16(NO_VAL16, buffer);
-			packnull(buffer);
-			return;
-		}
-
-		packstr(block_info->bg_block_id, buffer);
-		packstr(block_info->blrtsimage, buffer);
-
-		if (block_info->mp_inx) {
-			char *bitfmt = inx2bitfmt(block_info->mp_inx);
-			packstr(bitfmt, buffer);
-			xfree(bitfmt);
-		} else
-			packnull(buffer);
-
-		pack32(cluster_dims, buffer);
-		for (dim = 0; dim < cluster_dims; dim++)
-			pack16(block_info->conn_type[dim], buffer);
-
-		packstr(block_info->ionode_str, buffer);
-
-		if (block_info->ionode_inx) {
-			char *bitfmt =
-				inx2bitfmt(block_info->ionode_inx);
-			packstr(bitfmt, buffer);
-			xfree(bitfmt);
-		} else
-			packnull(buffer);
-
-		if (block_info->job_list)
-			count = list_count(block_info->job_list);
-
-		pack32(count, buffer);
-		if (count && count != NO_VAL) {
-			itr = list_iterator_create(block_info->job_list);
-			while ((job = list_next(itr))) {
-				slurm_pack_block_job_info(job, buffer,
-							  protocol_version);
-			}
-			list_iterator_destroy(itr);
-		}
-
-		packstr(block_info->linuximage, buffer);
-		packstr(block_info->mloaderimage, buffer);
-		packstr(block_info->mp_str, buffer);
-		pack32(block_info->cnode_cnt, buffer);
-		pack32(block_info->cnode_err_cnt, buffer);
-		pack16(block_info->node_use, buffer);
-		packstr(block_info->ramdiskimage, buffer);
-		packstr(block_info->reason, buffer);
-		pack16(block_info->state, buffer);
-	} else {
-		error("_pack_block_info_msg: protocol_version "
-		      "%hu not supported", protocol_version);
-	}
-}
-
-extern void slurm_pack_block_job_info(block_job_info_t *block_job_info,
-				      Buf buffer, uint16_t protocol_version)
-{
-	if (!block_job_info) {
-		packnull(buffer);
-		packnull(buffer);
-		pack32(0, buffer);
-		pack32(0, buffer);
-		packnull(buffer);
-		return;
-	}
-
-	packstr(block_job_info->cnodes, buffer);
-	if (block_job_info->cnode_inx) {
-		char *bitfmt = inx2bitfmt(block_job_info->cnode_inx);
-		packstr(bitfmt, buffer);
-		xfree(bitfmt);
-	} else
-		packnull(buffer);
-	pack32(block_job_info->job_id, buffer);
-	pack32(block_job_info->user_id, buffer);
-	packstr(block_job_info->user_name, buffer);
-}
-
-extern int slurm_unpack_block_info_members(block_info_t *block_info, Buf buffer,
-					   uint16_t protocol_version)
-{
-	uint32_t uint32_tmp;
-	char *mp_inx_str = NULL;
-	int i;
-	uint32_t count;
-	block_job_info_t *job = NULL;
-
-	memset(block_info, 0, sizeof(block_info_t));
-
-	if (protocol_version >= SLURM_MIN_PROTOCOL_VERSION) {
-		safe_unpackstr_xmalloc(&block_info->bg_block_id,
-				       &uint32_tmp, buffer);
-		safe_unpackstr_xmalloc(&block_info->blrtsimage,
-				       &uint32_tmp, buffer);
-		safe_unpackstr_xmalloc(&mp_inx_str, &uint32_tmp, buffer);
-		if (mp_inx_str == NULL) {
-			block_info->mp_inx = bitfmt2int("");
-		} else {
-			block_info->mp_inx = bitfmt2int(mp_inx_str);
-			xfree(mp_inx_str);
-		}
-
-		safe_unpack32(&count, buffer);
-		if (count > HIGHEST_DIMENSIONS) {
-			error("slurm_unpack_block_info_members: count of "
-			      "system is %d but we can only handle %d",
-			      count, HIGHEST_DIMENSIONS);
-			goto unpack_error;
-		}
-		for (i = 0; i < count; i++)
-			safe_unpack16(&block_info->conn_type[i], buffer);
-		safe_unpackstr_xmalloc(&(block_info->ionode_str),
-				       &uint32_tmp, buffer);
-		safe_unpackstr_xmalloc(&mp_inx_str, &uint32_tmp, buffer);
-		if (mp_inx_str == NULL) {
-			block_info->ionode_inx = bitfmt2int("");
-		} else {
-			block_info->ionode_inx = bitfmt2int(mp_inx_str);
-			xfree(mp_inx_str);
-		}
-		safe_unpack32(&count, buffer);
-		if (count > NO_VAL)
-			goto unpack_error;
-		if (count != NO_VAL) {
-			block_info->job_list =
-				list_create(slurm_free_block_job_info);
-			for (i = 0; i < count; i++) {
-				if (_unpack_block_job_info(&job, buffer,
-							   protocol_version)
-				    == SLURM_ERROR)
-					goto unpack_error;
-				list_append(block_info->job_list, job);
-			}
-		}
-
-		safe_unpackstr_xmalloc(&block_info->linuximage,
-				       &uint32_tmp, buffer);
-		safe_unpackstr_xmalloc(&block_info->mloaderimage,
-				       &uint32_tmp, buffer);
-		safe_unpackstr_xmalloc(&(block_info->mp_str), &uint32_tmp,
-				       buffer);
-		safe_unpack32(&block_info->cnode_cnt, buffer);
-		safe_unpack32(&block_info->cnode_err_cnt, buffer);
-		safe_unpack16(&block_info->node_use, buffer);
-		safe_unpackstr_xmalloc(&block_info->ramdiskimage,
-				       &uint32_tmp, buffer);
-		safe_unpackstr_xmalloc(&block_info->reason,
-				       &uint32_tmp, buffer);
-		safe_unpack16(&block_info->state, buffer);
-	} else {
-		error("slurm_unpack_block_info_members: protocol_version "
-		      "%hu not supported", protocol_version);
-		goto unpack_error;
-	}
-	return SLURM_SUCCESS;
-
-unpack_error:
-	error("slurm_unpack_block_info_members: error unpacking here");
-	slurm_free_block_info_members(block_info);
-	return SLURM_ERROR;
-}
-
-extern int slurm_unpack_block_info_msg(
-	block_info_msg_t **block_info_msg_pptr, Buf buffer,
-	uint16_t protocol_version)
-{
-	int i;
-	block_info_msg_t *buf;
-
-	buf = xmalloc(sizeof(block_info_msg_t));
-	if (protocol_version >= SLURM_MIN_PROTOCOL_VERSION) {
-		safe_unpack32(&(buf->record_count), buffer);
-		if (buf->record_count > NO_VAL)
-			goto unpack_error;
-		safe_unpack_time(&buf->last_update, buffer);
-
-		buf->block_array = xmalloc(sizeof(block_info_t) *
-					   buf->record_count);
-
-		for (i = 0; i < buf->record_count; i++) {
-			if (slurm_unpack_block_info_members(
-				    &(buf->block_array[i]), buffer,
-				    protocol_version))
-				goto unpack_error;
-		}
-	} else {
-		error("slurm_unpack_block_info_msg: protocol_version "
-		      "%hu not supported", protocol_version);
-		goto unpack_error;
-	}
-	*block_info_msg_pptr = buf;
-	return SLURM_SUCCESS;
-
-unpack_error:
-	slurm_free_block_info_msg(buf);
-	*block_info_msg_pptr = NULL;
-	return SLURM_ERROR;
-}
-
-static int _unpack_block_info(block_info_t **block_info, Buf buffer,
-			      uint16_t protocol_version)
-{
-	int rc = SLURM_SUCCESS;
-	block_info_t *bg_rec = xmalloc(sizeof(block_info_t));
-
-	if ((rc = slurm_unpack_block_info_members(
-		    bg_rec, buffer, protocol_version))
-	    != SLURM_SUCCESS)
-		xfree(bg_rec);
-	else
-		*block_info = bg_rec;
-	return rc;
 }
 
 static int _unpack_burst_buffer_info_msg(
