@@ -221,7 +221,6 @@ inline static void  _slurm_rpc_update_node(slurm_msg_t * msg);
 inline static void  _slurm_rpc_update_layout(slurm_msg_t * msg);
 inline static void  _slurm_rpc_update_partition(slurm_msg_t * msg);
 inline static void  _slurm_rpc_update_powercap(slurm_msg_t * msg);
-inline static void  _slurm_rpc_update_block(slurm_msg_t * msg);
 inline static void  _update_cred_key(void);
 
 static void  _slurm_rpc_composite_msg(slurm_msg_t *msg);
@@ -475,9 +474,6 @@ void slurmctld_req(slurm_msg_t *msg, connection_arg_t *arg)
 		break;
 	case REQUEST_DELETE_RESERVATION:
 		_slurm_rpc_resv_delete(msg);
-		break;
-	case REQUEST_UPDATE_BLOCK:
-		_slurm_rpc_update_block(msg);
 		break;
 	case REQUEST_RESERVATION_INFO:
 		_slurm_rpc_resv_show(msg);
@@ -5111,55 +5107,6 @@ static void _slurm_rpc_layout_show(slurm_msg_t * msg)
 	/* send message */
 	slurm_send_node_msg(msg->conn_fd, &response_msg);
 	xfree(dump);
-}
-
-/* _slurm_rpc_update_block - process RPC to update the configuration
- *	of a block (e.g. FREE/ERROR/DELETE) */
-static void _slurm_rpc_update_block(slurm_msg_t * msg)
-{
-	int error_code = SLURM_SUCCESS;
-	DEF_TIMERS;
-	update_block_msg_t *block_desc_ptr = (update_block_msg_t *) msg->data;
-	uid_t uid = g_slurm_auth_get_uid(msg->auth_cred,
-					 slurmctld_config.auth_info);
-	char *name = NULL;
-	START_TIMER;
-
-	debug2("Processing RPC: REQUEST_UPDATE_BLOCK from uid=%d", uid);
-	if (!validate_super_user(uid)) {
-		error_code = ESLURM_USER_ID_MISSING;
-		error("Security violation, UPDATE_BLOCK RPC from uid=%d", uid);
-		if (block_desc_ptr->bg_block_id) {
-			name = block_desc_ptr->bg_block_id;
-		} else if (block_desc_ptr->mp_str) {
-			name = block_desc_ptr->mp_str;
-		}
-	}
-
-	if (error_code == SLURM_SUCCESS) {
-		/* do RPC call */
-		if (block_desc_ptr->bg_block_id) {
-			error_code = select_g_update_block(block_desc_ptr);
-			END_TIMER2("_slurm_rpc_update_block");
-			name = block_desc_ptr->bg_block_id;
-		} else {
-			error("Unknown update for blocks");
-			error_code = SLURM_ERROR;
-			END_TIMER2("_slurm_rpc_update_block");
-		}
-	}
-
-	/* return result */
-	if (error_code) {
-		info("_slurm_rpc_update_block %s: %s",
-		     name,
-		     slurm_strerror(error_code));
-		slurm_send_rc_msg(msg, error_code);
-	} else {
-		debug2("_slurm_rpc_update_block complete for %s %s",
-		       name, TIME_STR);
-		slurm_send_rc_msg(msg, SLURM_SUCCESS);
-	}
 }
 
 /* determine of nodes are ready for the job */
